--- a/views/drinks_index.ejs
+++ b/views/drinks_index.ejs
@@ -7,7 +7,9 @@
 	<style type="text/css">
 		body {
 			color: rgb(245, 243, 240);
-			background-color: rgb(248,143,34);
+			background: #ff416c; /* fallback for old browsers */
+  background: -webkit-linear-gradient(to right, #ff416c, #ff4b2b); /* Chrome 10-25, Safari 5.1-6 */
+  background: linear-gradient(to right, #ff416c, #ff4b2b);
 		}
 	</style>
 </head>
